<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.operativus.app.portfolio.MainActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:orientation="vertical"
        android:textAlignment="center">
        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:id="@+id/title"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textSize="25dp"
            android:gravity="center_vertical|center_horizontal" />

        <Button
            android:text="@string/btn_pop_movies"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btn_pop_movies"
            android:textAlignment="center" />
        <Button
            android:text="@string/btn_stock_hawk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_stock_hawk" />
        <Button
            android:text="@string/btn_build_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_build_it" />
        <Button
            android:text="@string/btn_make_your_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_make_your_app" />
        <Button
            android:text="@string/btn_go_ubiquitos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_go_ubiquitos" />
        <Button
            android:text="@string/btn_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_capstone"
            android:background="@color/colorButtonCapstone" />

    </LinearLayout>


</ScrollView>
